fix unresponsive embeds (#1759)
adding a css class to make iframes responsive and respect the viewport's witdth
this avoids the horizontal scrollbar on mobile

--- a/_assets/stylesheets/main.scss
+++ b/_assets/stylesheets/main.scss
@@ -223,3 +223,18 @@ pre {
     }
   }
 }
+
+.responsive-embed {
+  position: relative;
+  overflow: hidden;
+  padding-top: 56.25%;
+
+  iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+  }
+}
